# artushak-static-web-packer

./: Cargo.toml  README.md
src/: main.rs  manifest.rs  tera_filter.rs  test.rs
src/filters/: mod.rs  run_executable.rs  scss2css.rs
test_files/: assets.json  static_website.json
test_files/correct_output/: index.html
test_files/website/: index.html.tera
