[package]
name = "artushak-static-web-packer"
version = "0.1.0"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
edition = "2018"
description = "Asset packer for static website"
readme = "README.md"
license = "Apache-2.0"
keywords = ["assets", "static-website"]
categories = ["web-programming", "command-line-utilities"]
repository = "https://github.com/artushak/artushak_static_web_packer/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artushak-web-assets = { git = "https://github.com/artushak/artushak-web-assets" }
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
rsass = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"

[dev-dependencies]
tempfile = "3"
scraper = "0.13.0"
html5ever = "0.26.0"

[features]
