[package]
name = "artushak-static-web-packer"
version = "0.1.0"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
edition = "2021"
description = "Asset packer for static website"
readme = "README.md"
license = "Apache-2.0"
keywords = ["assets", "static-website"]
categories = ["web-programming", "command-line-utilities"]
repository = "https://github.com/artushak/artushak_static_web_packer/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artushak-web-assets = "^0.2.1"
clap = { version = "^4.4", features = ["derive"] }
env_logger = "^0.11.10"
log = "^0.4"
rsass = "^0.29"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tera = "^1"

[dev-dependencies]
tempfile = "^3"
scraper = "^0.26.0"
html5ever = "^0.39.0"

[features]
